rewriting api.php file
